# bite_optimizer

./: .gitignore  requirements.txt  requirements_full.txt  view_local.py
3dteethland/teethland/: __init__.py  cluster.py  tensor.py  visualization.py
3dteethland/teethland/config/: config.yaml  config_synapse.yaml
3dteethland/teethland/data/: extract_teeth.py  gt_instances.py  stats.py  transforms.py
3dteethland/teethland/datamodules/: __init__.py  teethalign.py  teethbinseg.py  teethbinsegattrs.py  teethfull.py  teethinstseg.py  teethland.py  teethmixedseg.py  teethmultiseg.py  teethpanopseg.py  teethseg.py
3dteethland/teethland/metrics/: __init__.py  landmark_f1.py  landmark_map.py  tooth_f1.py
3dteethland/teethland/models/: __init__.py  alignnet.py  binsegattrsnet.py  binsegnet.py  dentalnet.py  fullnet.py  landmarknet.py  multisegnet.py  panopticnet.py
3dteethland/teethland/nn/: __init__.py  functional.py
CrossTooth_CVPR2025/models/PTv1/: point_transformer_seg.py
assets/: dummy_mandible.stl  dummy_maxilla.stl
assets/ZOUIF2W4/: ZOUIF2W4_lower_segmented.ply
envs/: __init__.py  bite_env.py
scripts/: generate_dental_assets.py  test_simulator.py  train_rl.py  verify_env.py  verify_icp_rl.py
src/: crosstooth_interface.py  server.py  simulator.py  utils.py
src/crosstooth/: utils.py
src/web/: app.js  index.html
tensorboard/PPO_1/: events.out.tfevents.1765356743.macmini-lucasdwlee.local.95657.0
tensorboard/PPO_2/: events.out.tfevents.1765357542.macmini-lucasdwlee.local.97169.0
tensorboard/PPO_3/: events.out.tfevents.1765359423.macmini-lucasdwlee.local.99973.0
tooth_viewer/: CMakeLists.txt
tooth_viewer/scripts/: segment.py  teethland_infer.py
tooth_viewer/scripts/pointops/: __init__.py  functions.py
tooth_viewer/src/: AdamOptimizer.cpp  AdamOptimizer.h  BiteOptimizer.h  BiteSimulator.cpp  BiteSimulator.h  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Optimizer.cpp  Optimizer.h  RLOptimizer.cpp  RLOptimizer.h  Segmentation.cpp  Segmentation.h  main.cpp
(+30 files in other folders)
